# rust-reading-group-redirects

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  biome.json  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: biomejs.yml  cargo-build-and-test.yml  cargo-build.yml  cargo-fmt.yml  cargo-tests.yml  nodejs.yml
.zed/: settings.json
assets/: index.html
drizzle/: 0000_cynical_meteorite.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
some-schedules-ive-maybe-used/: current-bookmarkable-schedule.json
src/: constants.ts  env.d.ts  frontend.rs  index.ts  main.rs  renderer.tsx  types-and-validators.ts
src/db/: schema.ts
src/frontend/: add_bookmark_event.rs
src/utils/: getCurrentUrlFromSchedule.ts
templates/: add-bookmark-event.html.jinja2  temp-dynamic.html.minijinja
