[package]
name = "redirector"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
minijinja = { version = "2.14.0", features = ["loader"] }
minijinja-autoreload = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing-subscriber = "0.3.22"
